# seedance-studio

./: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  test-upload.mjs
SKILLS/: seedance-api-guide.md
assets/: SKILL (1).md
scripts/: build-tauri.js  build-tauri.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/server/: package.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx
src/app/api/code-review/: route.ts
src/app/api/fetch-url/: route.ts
src/app/api/global-avatars/: route.ts
src/app/api/long-videos/: route.ts
src/app/api/projects/: route.ts
src/app/projects/: layout.tsx  page.tsx
src/app/projects/[id]/: layout.tsx  page.tsx
src/components/: asset-card.tsx  asset-detail-dialog.tsx  prompt-textarea.tsx  thumbnail-upload.tsx
src/components/layout/: project-layout.tsx
src/components/long-video/: LongVideoEditor.tsx
src/components/settings/: SettingsDialog.tsx
src/components/tasks/: TaskCard.tsx  TaskDetailSheet.tsx
src/components/ui/: video-player.tsx
src/hooks/: use-draggable.ts
src/lib/: assets.ts  auto-sync.ts  drag-store.ts  events.ts  global-avatars-sync.ts  global-avatars.ts  long-videos.ts  merge-videos.ts  projects.ts  seedance.ts  settings.ts  slug.ts  tasks.ts  upload.ts  video-thumbnail.ts  virtual-avatar-resolve.ts
src/storage/database/: schema.ts  sqlite-client.ts  supabase-client.ts
src/storage/database/shared/: relations.ts  schema.ts
src/storage/tos/: client.ts
(+39 files in other folders)
