[package]
name = "yanchao-video-tool"
version = "1.0.0"
description = "焱超视频生成工具 - 基于 Seedance 2.0"
authors = ["焱超"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }
